--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.skife</groupId>
     <artifactId>skife-config</artifactId>
     <packaging>jar</packaging>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <name>skife-config</name>
     <url>http://maven.apache.org</url>
     <dependencies>
