--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
             <groupId>commons-configuration</groupId>
             <artifactId>commons-configuration</artifactId>
             <version>1.6</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
