--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+        	<groupId>joda-time</groupId>
+        	<artifactId>joda-time</artifactId>
+        	<version>1.6.2</version>
+        	<scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
