Add myself as contributor, to get access to Sonatype Nexus repo publishing

--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,11 @@
             <id>hgschmie</id>
             <name>Henning Schmiedehausen</name>
         </developer>
+        <developer>
+            <id>cowtowncoder</id>
+            <name>Tatu Saloranta</name>
+            <email>tatu@fasterxml.com</email>
+        </developer>
     </developers>
 
 </project>
