--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.skife.config</groupId>
     <artifactId>config-magic</artifactId>
     <packaging>jar</packaging>
-    <version>0.17</version>
+    <version>0.18-SNAPSHOT</version>
     <name>config-magic</name>
     <url>http://github.com/brianm/config-magic</url>
     <description>
