--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.skife.config</groupId>
     <artifactId>config-magic</artifactId>
     <packaging>jar</packaging>
-    <version>0.19</version>
+    <version>0.19-SNAPSHOT</version>
     <name>config-magic</name>
     <url>http://github.com/brianm/config-magic</url>
     <description>
@@ -23,10 +23,9 @@
 
     <scm>
         <connection>scm:git:git://github.com/brianm/config-magic.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/brianm/config-magic.git</developerConnection>
-        <url>http://github.com/brianm/config-magic</url>
-        <tag>config-magic-0.19</tag>
-  </scm>
+        <developerConnection>scm:git:git@github.com:brianm/config-magic.git</developerConnection>
+        <url>http://github.com/brianm/config-magic/tree/master</url>
+    </scm>
 
     <distributionManagement>
 
