[maven-release-plugin] prepare release config-magic-0.19

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.skife.config</groupId>
     <artifactId>config-magic</artifactId>
     <packaging>jar</packaging>
-    <version>0.19-SNAPSHOT</version>
+    <version>0.19</version>
     <name>config-magic</name>
     <url>http://github.com/brianm/config-magic</url>
     <description>
@@ -24,7 +24,8 @@
     <scm>
         <connection>scm:git:https://github.com/brianm/config-magic.git</connection>
         <url>https://github.com/brianm/config-magic</url>
-    </scm>
+      <tag>config-magic-0.19</tag>
+  </scm>
 
     <distributionManagement>
 
